[package]
name = "webserver"
version = "0.1.0"
authors = ["Victor Quiroz Castro <victorhqc@gmail.com>"]
edition = "2018"

[dependencies]
askama = "0.8.0"
dotenv = "0.14.1"
futures="0.1.28"
gotham = "0.3.0"
gotham_derive = "0.3.0"
hyper = "0.12.32"
hyper-tls = "0.3.2"
mime = "0.3.13"
rand = "0.7.0"
redis = "0.10.0"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"
url = "1.7.2"
tokio = "0.1.22"
gif-service = { path = "../gif-service" }
